--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,18 @@ body {
   font-family: 'Lato', sans-serif;
   color: #fff
 }
+.bg {
+  /* The image used */
+background-image: url("../img/sunrise-bg.jpg");
+
+/* Full height */
+height: 100%;
+
+/* Center and scale the image nicely */
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
 .navbar {
   background: rgba(0, 0, 0,0.6);
 }
@@ -126,4 +138,52 @@ body {
     padding-top: 70px;
   }
 
+}
+
+/*comingsoon*/
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+svg {
+    position: relative;
+    font: 8.5em 'Montserrat';
+    width: 860px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+    stroke: #4D163D;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: #840037;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #BD0034;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #BD0034;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #FDB731;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
 }
