--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body {
   margin:0;
   padding:0;
   font-family: 'Lato', sans-serif;
-  color: #fff
+  color: #fff;
+  width: 100%;
+  height: 100%;
 }
 .bg {
   /* The image used */
